# betting-odds-converter

./: .gitignore  Cargo.toml  LICENSE  README.md  build.sbt  oddsconverter.R  package.json
.github/workflows/: rust-test.yml  scala.yml
R/: decimalToProb.R  fractionToProb.R  moneylineToProb.R  user_input.R
src/: bettingOddsCalculator.rs  betting_odds_calculator.rs  implied.rs  main.rs  probFunctions.rs  prob_functions.rs  utils.rs
src/main/scala/: BettingOddsCalculator.scala  ProbCalculator.scala  ProbFunctions.scala  helper.sc  main.scala  practiceWorksheet.sc
src/test/scala/: ProbFunctionsSpec.scala
